<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                                      xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
            app:iconSpaceReserved="false"
            android:key="settingsServer"
            android:title="@string/settings_server">

        <org.itxtech.daedalus.widget.ClickPreference
                android:key="settings_server_management"
                android:title="@string/settings_server_management"
                android:summary="@string/settings_server_management_summary"/>
        <org.itxtech.daedalus.widget.ClickPreference
                android:key="settings_network_rules"
                android:title="@string/settings_network_rules"
                android:summary="@string/settings_network_rules_summary"/>
        <ListPreference
                android:key="primary_server"
                android:title="@string/primary_server"
                android:defaultValue="0">
        </ListPreference>
        <ListPreference
                android:key="secondary_server"
                android:title="@string/secondary_server"
                android:defaultValue="1">
        </ListPreference>
        <EditTextPreference
                android:key="dns_test_servers"
                android:defaultValue="@string/default_dns_test_servers"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:title="@string/settings_dns_test_servers"/>
    </PreferenceCategory>

    <PreferenceCategory
            app:iconSpaceReserved="false"
            android:key="settings_system"
            android:title="@string/settings_system">

        <SwitchPreference
                android:key="settings_boot"
                android:title="@string/settings_boot"
                android:summary="@string/settings_boot_summary"
                android:defaultValue="false"/>
        <SwitchPreference
                android:key="settings_notification"
                android:title="@string/settings_notification"
                android:summary="@string/settings_notification_summary"
                android:defaultValue="true"/>
        <ListPreference
                android:key="settings_theme"
                android:title="@string/settings_theme"
                android:dialogTitle="@string/settings_theme"
                android:entries="@array/theme_entries"
                android:entryValues="@array/theme_values"
                android:defaultValue="auto"
                app:useSimpleSummaryProvider="true"/>
        <SwitchPreference
                android:key="settings_foreground"
                android:title="@string/settings_foreground"
                android:summary="@string/settings_foreground_summary"
                android:defaultValue="false"/>
        <EditTextPreference
                android:key="settings_log_size"
                android:selectAllOnFocus="false"
                android:singleLine="true"
                android:numeric="integer"
                android:defaultValue="10000"
                android:title="@string/settings_log_size"/>
    </PreferenceCategory>

    <PreferenceCategory
            app:iconSpaceReserved="false"
            android:key="settings_app_filter"
            android:title="@string/settings_app_filter">
        <SwitchPreference
                android:key="settings_app_filter_switch"
                android:title="@string/settings_app_filter"
                android:summary="@string/settings_app_filter_summary"
                android:defaultValue="false"/>
        <SwitchPreference
                android:key="settings_app_filter_mode_switch"
                android:title="@string/settings_app_filter_mode"
                android:summary="@string/settings_app_filter_mode_summary"
                android:defaultValue="false"
                android:enabled="false"/>
        <org.itxtech.daedalus.widget.ClickPreference
                android:key="settings_app_filter_list"
                android:title="@string/settings_app_filter_list"
                android:summary="@string/settings_app_filter_list_summary"
                android:enabled="false"/>
    </PreferenceCategory>

    <PreferenceCategory
            app:iconSpaceReserved="false"
            android:key="settings_advanced"
            android:title="@string/settings_advanced">
        <SwitchPreference
                android:key="settings_advanced_switch"
                android:title="@string/settings_advanced_on"
                android:summary="@string/settings_advanced_summary"
                android:defaultValue="false"/>
        <SwitchPreference
                android:key="settings_count_query_times"
                android:title="@string/settings_count_number_of_queries"
                android:summary="@string/settings_count_query_times_summary"
                android:defaultValue="false"
                android:enabled="false"/>
        <SwitchPreference
                android:key="settings_use_system_dns"
                android:title="@string/settings_use_system_dns"
                android:summary="@string/settings_use_system_dns_summary"
                android:defaultValue="false"/>
        <ListPreference
                android:key="settings_dns_query_method"
                android:title="@string/settings_dns_query_method"
                android:summary="@string/settings_dns_query_method_summary"
                android:dialogTitle="@string/settings_dns_query_method"
                android:entries="@array/dns_query_methods"
                android:entryValues="@array/dns_query_method_values"
                android:defaultValue="0"
                android:enabled="false"/>
        <SwitchPreference
                android:key="settings_debug_output"
                android:title="@string/settings_debug_output"
                android:summary="@string/settings_debug_output_summary"
                android:defaultValue="false"
                android:enabled="false"/>
    </PreferenceCategory>

    <PreferenceCategory
            app:iconSpaceReserved="false"
            android:key="settings_backup"
            android:title="@string/settings_backup">
        <org.itxtech.daedalus.widget.ClickPreference
                android:key="settings_export_config"
                android:title="@string/settings_export_config"
                android:summary="@string/settings_export_config_summary"/>
        <org.itxtech.daedalus.widget.ClickPreference
                android:key="settings_import_config"
                android:title="@string/settings_import_config"
                android:summary="@string/settings_import_config_summary"/>
        <org.itxtech.daedalus.widget.ClickPreference
                android:key="settings_import_config_url"
                android:title="@string/settings_import_config_url"
                android:summary="@string/settings_import_config_url_summary"/>
    </PreferenceCategory>

    <PreferenceCategory
            app:iconSpaceReserved="false"
            android:key="settings_help"
            android:title="@string/settings_help_and_support">
        <org.itxtech.daedalus.widget.ClickPreference
                android:key="settings_privacy_policy"
                android:title="@string/settings_privacy_policy"/>
        <org.itxtech.daedalus.widget.ClickPreference
                android:key="settings_check_update"
                android:title="@string/settings_check_update"
                android:summary="@string/settings_update_summary"/>
        <org.itxtech.daedalus.widget.ClickPreference
                android:key="settings_issue_tracker"
                android:title="@string/settings_bug_report"
                android:summary="@string/settings_issue_summary"/>
        <org.itxtech.daedalus.widget.ClickPreference
                android:key="settings_manual"
                android:title="@string/settings_manual"
                android:summary="@string/settings_manual_summary"/>
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
