<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                                      xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
            android:key="serverName"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/settings_server_name"/>

    <PreferenceCategory
            app:iconSpaceReserved="false"
            android:key="serverSettings"
            android:title="@string/settings_server">
        <EditTextPreference
                android:key="serverAddress"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:title="@string/settings_server_address"/>
        <EditTextPreference
                android:key="serverPort"
                android:selectAllOnFocus="false"
                android:singleLine="true"
                android:title="@string/settings_server_port"/>
        <Preference
                android:key="serverCertificate"
                android:title="@string/settings_server_certificate"
                android:summary="@string/cert_none"/>
    </PreferenceCategory>

    <PreferenceCategory
            app:iconSpaceReserved="false"
            android:key="serverProxy"
            android:title="@string/settings_socks5">
        <SwitchPreference
                android:key="serverProxied"
                android:title="@string/settings_server_proxied"
                android:summary="@string/settings_server_proxied_summary"
                android:defaultValue="false"/>
        <EditTextPreference
                android:key="serverProxyHost"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:title="@string/settings_socks5_host"/>
        <EditTextPreference
                android:key="serverProxyPort"
                android:singleLine="true"
                android:title="@string/settings_socks5_port"/>
        <EditTextPreference
                android:key="serverProxyUsername"
                android:singleLine="true"
                android:title="@string/settings_socks5_username"/>
        <EditTextPreference
                android:key="serverProxyPassword"
                android:singleLine="true"
                android:title="@string/settings_socks5_password"/>
    </PreferenceCategory>

    <PreferenceCategory
            app:iconSpaceReserved="false"
            android:key="serverTestCategory"
            android:title="@string/action_dns_test">
        <Preference
                android:key="serverTest"
                android:title="@string/server_test"
                android:summary="@string/server_test_summary"/>
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
