<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_export"
          android:title="@string/export"
          android:icon="@drawable/ic_import_export"
          android:alphabeticShortcut="e"
          android:numericShortcut="0"
          app:showAsAction="always"/>
    <item android:id="@+id/action_delete"
          android:title="@string/delete"
          android:icon="@drawable/ic_delete"
          android:alphabeticShortcut="d"
          android:numericShortcut="1"
          app:showAsAction="always"/>
    <item android:id="@+id/action_refresh"
          android:title="@string/action_refresh"
          android:icon="@drawable/ic_refresh"
          android:alphabeticShortcut="r"
          android:numericShortcut="2"
          app:showAsAction="always"/>
</menu>